--- a/blog-vista/package.json
+++ b/blog-vista/package.json
@@ -8,9 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next build && next export"
-    
   },
   "dependencies": {
+    "bootstrap": "^5.3.1",
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0"
